added arrows above buttons

--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,13 @@ hr{
     width: 55px;
 }
 
+.homeMenu {
+    margin-left: 10px;
+    font-size: 1.5rem;
+    display: none;
+    transition: all 1s;
+}
+
 .menu {
     text-align: center;
     margin: 10px 10px 10px auto;
@@ -74,6 +81,30 @@ a:hover {
 
 .heading h1{
     font-size: 4rem;
+}
+
+.arrows{
+    display: grid;
+    width: 40%;
+    grid-template: 50px / 40% 40%;
+    gap: 30px;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
+}
+
+.arrowGif{
+    width: 20%;
+}
+
+#arrowGifOne {
+    justify-self: center;
+    visibility: hidden;
+}
+
+#arrowGifTwo {
+    justify-self:  center;
+    visibility: hidden;
 }
 
 .character-selection{
@@ -444,12 +475,13 @@ a:hover {
         display: flex;
         height: 80px;
         width: 100%;
+        align-items: center;
         margin: 0 auto 50px;
         background-color: #99A799;    
     }
     .navLogo {
         margin: 15px auto 0 10px;
-        width: 50px;
+        width: 60px;
     }
     .menu {
         text-align: center;
@@ -473,6 +505,18 @@ a:hover {
     .character-type p{
         font-size: 1.1rem;
         margin-top: 5px;
+    }
+    .arrows{
+        display: none
+    }
+    .arrowGif{
+        width: 20%;
+    }
+    #arrowGifOne {
+        display: none
+    }
+    #arrowGifTwo {
+        display: none
     }
     .character-selection{
         width: 35%;
