--- a/weather.css
+++ b/weather.css
@@ -343,3 +343,9 @@ a:hover {
       color: black;
       font-size: 1.1rem;
   }
+  .homeMenu {
+    margin-left: 10px;
+    font-size: 1.5rem;
+    display: none;
+    transition: all 1s;
+  }
